--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@
   
   <div class="col-12 col-sm-4">
     
-    <div class="featurette-icon"><i class="fas fa-book-bookmark"></i></div>
+    <div class="featurette-icon"><i class="fas fa-book"></i></div>
     
     <div class="section-subheading">Writing</div>
     <p>60%</p>
